# browser-flow-backend

./: .env.example  .gitignore  API_CURL_EXAMPLES.md  README.md  TEST_EXECUTION_SUMMARY.md  main.py  pyproject.toml  test_basic_verification.py  test_composio_googledocs.py  test_composio_notion.py  test_composio_trello.py  test_excel_extraction.py  test_notion_mcp_direct.py  url_context_output.json
.cursor/plans/: database_integration_for_tasks_api_2e94884f.plan.md
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_convert_embedding_to_vector.py  003_add_intent_workflow_fields.py  004_user_integration_tokens.py  005_drop_intent_workflow_add_integration_metadata.py  006_add_extract_data_task_types.py
app/: __init__.py  main.py
app/agents/: __init__.py  data_extraction_agent.py  note_taking_agent.py
app/api/: __init__.py  contexts.py  files.py  integrations.py  tasks.py
app/config/: agents_registry.json
app/core/: Untitled  __init__.py  agent_registry.py  composio_trello.py  config.py  integration_types.py  task_types.py  tool_registry.py  url_actions.py  url_context.py
app/db/: __init__.py  session.py
app/models/: __init__.py  agent_metadata.py  agent_result.py  task_identification.py  (+5 more)
datasets/: process_context_evaluation_dataset.csv  task_identification_dataset.csv  task_identification_dataset.json
docs/: API_CURL_EXAMPLES.md  TEST_RESULTS.md  notion_api_curls.md
test_scripts/: check_database_state.py  composio_integration.py  test_create_notion_page.py  url_context_action_agent.py  url_context_agent.py
tests/: __init__.py  conftest.py
(+47 files in other folders)
